// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FictionBodyToolbar default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="body-toolbar-container hidden-xs hidden-sm hidden-md"
      style={
        Object {
          "left": "35px",
          "top": "5px",
        }
      }
    >
      <div
        className="add-sentiment"
      >
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment sentiment-active"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M13.9072848, 1.39072848 C6.99072848, 1.39072848 1.39072848, 6.99072848 1.39072848, 13.9072848 C1.39072848, 20.8238411 6.99072848, 26.4238411 13.9072848, 26.4238411 C20.8238411, 26.4238411 26.4238411, 20.8238411 26.4238411, 13.9072848 C26.4238411, 6.99072848 20.8238411, 1.39072848 13.9072848, 1.39072848 L13.9072848, 1.39072848 Z"
                    fill="#ffffff"
                    stroke="#46d38d"
                  />
                  <path
                    d="M8.02913907, 9.86490066 C7.06490066, 9.86490066 6.28609272, 10.6437086 6.28609272, 11.607947 C6.28609272, 12.5721854 7.06490066, 13.3509934 8.02913907, 13.3509934 C8.99337748, 13.3509934 9.77218543, 12.5721854 9.77218543, 11.607947 C9.75364238, 10.6437086 8.99337748, 9.86490066 8.02913907, 9.86490066 L8.02913907, 9.86490066 Z"
                    fill="#46d38d"
                  />
                  <path
                    d="M19.7854305, 9.86490066 C18.8211921, 9.86490066 18.0423841, 10.6437086 18.0423841, 11.607947 C18.0423841, 12.5721854 18.8211921, 13.3509934 19.7854305, 13.3509934 C20.7496689, 13.3509934 21.5284768, 12.5721854 21.5284768, 11.607947 C21.5284768, 10.6437086 20.7496689, 9.86490066 19.7854305, 9.86490066 L19.7854305, 9.86490066 Z"
                    fill="#46d38d"
                  />
                  <path
                    d="M20.9350993, 17.189404 C16.9112583, 21.1576159 10.9218543, 21.1576159 6.89801325, 17.189404 C6.58278146, 16.8741722 6.52715232, 16.3735099 6.76821192, 16.0953642 C7.00927152, 15.8357616 7.41721854, 15.8543046 7.69536424, 16.1324503 C11.2556291, 19.6556291 16.5774834, 19.6556291 20.1377483, 16.1324503 C20.415894, 15.8543046 20.8238411, 15.8357616 21.0649007, 16.0953642 C21.3059603, 16.3735099 21.2503311, 16.8741722 20.9350993, 17.189404 L20.9350993, 17.189404 Z"
                    fill="#46d38d"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M14, 1.39072848 C7.08344371, 1.39072848 1.48344371, 6.99072848 1.48344371, 13.9072848 C1.48344371, 20.8238411 7.08344371, 26.4238411 14, 26.4238411 C20.9165563, 26.4238411 26.5165563, 20.8238411 26.5165563, 13.9072848 C26.5165563, 6.99072848 20.9165563, 1.39072848 14, 1.39072848 L14, 1.39072848 Z"
                    fill="#ffffff"
                    stroke="#f75959"
                  />
                  <path
                    d="M8.1218543, 9.86490066 C7.15761589, 9.86490066 6.37880795, 10.6437086 6.37880795, 11.607947 C6.37880795, 12.5721854 7.15761589, 13.3509934 8.1218543, 13.3509934 C9.08609272, 13.3509934 9.86490066, 12.5721854 9.86490066, 11.607947 C9.86490066, 10.6437086 9.06754967, 9.86490066 8.1218543, 9.86490066 L8.1218543, 9.86490066 Z"
                    fill="#f75959"
                  />
                  <path
                    d="M19.8781457, 9.86490066 C18.9139073, 9.86490066 18.1350993, 10.6437086 18.1350993, 11.607947 C18.1350993, 12.5721854 18.9139073, 13.3509934 19.8781457, 13.3509934 C20.8423841, 13.3509934 21.6211921, 12.5721854 21.6211921, 11.607947 C21.6211921, 10.6437086 20.8423841, 9.86490066 19.8781457, 9.86490066 L19.8781457, 9.86490066 Z"
                    fill="#f75959"
                  />
                  <path
                    d="M21.0278146, 18.8953642 C17.0039735, 14.9271523 11.0145695, 14.9271523 6.99072848, 18.8953642 C6.67549669, 19.210596 6.61986755, 19.7112583 6.86092715, 19.989404 C7.10198675, 20.2490066 7.50993377, 20.2304636 7.78807947, 19.9523179 C11.3483444, 16.4291391 16.6701987, 16.4291391 20.2304636, 19.9523179 C20.5086093, 20.2304636 20.9165563, 20.2490066 21.1576159, 19.989404 C21.3986755, 19.7112583 21.3430464, 19.210596 21.0278146, 18.8953642 L21.0278146, 18.8953642 Z"
                    fill="#f75959"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M13.9072848, 1.48344371 C6.99072848, 1.48344371 1.39072848, 7.08344371 1.39072848, 14 C1.39072848, 20.9165563 6.99072848, 26.5165563 13.9072848, 26.5165563 C20.8238411, 26.5165563 26.4238411, 20.9165563 26.4238411, 14 C26.4238411, 7.08344371 20.8238411, 1.48344371 13.9072848, 1.48344371 L13.9072848, 1.48344371 Z"
                    fill="#ffffff"
                    stroke="#faaf3f"
                  />
                  <g
                    fill="#faaf3f"
                    transform="translate(4.821192, 7.231788)"
                  >
                    <g
                      transform="translate(1.298013, 2.966887)"
                    >
                      <path
                        d="M1.90993377, 0.0556291391 C0.945695364, 0.0556291391 0.166887417, 0.834437086 0.166887417, 1.7986755 C0.166887417, 2.76291391 0.945695364, 3.54172185 1.90993377, 3.54172185 C2.87417219, 3.54172185 3.65298013, 2.76291391 3.65298013, 1.7986755 C3.63443709, 0.834437086 2.85562914, 0.0556291391 1.90993377, 0.0556291391 L1.90993377, 0.0556291391 Z"
                      />
                      <ellipse
                        cx="13.6662252"
                        cy="1.78013245"
                        rx="1.74304636"
                        ry="1.74304636"
                      />
                    </g>
                    <g>
                      <rect
                        height="5.56291391"
                        transform="translate(15.209636, 1.684541) rotate(-69.910674) translate(-15.209636, -1.684541) "
                        width="1.39072848"
                        x="14.514241"
                        y="-1.09703938"
                      />
                      <rect
                        height="1.39072848"
                        transform="translate(2.964735, 1.694145) rotate(-20.078564) translate(-2.964735, -1.694145) "
                        width="5.56291391"
                        x="0.183345952"
                        y="0.99879725"
                      />
                    </g>
                    <path
                      d="M12.2569536, 10.4397351 L10.0317881, 12.1456954 C9.58675497, 12.4980132 9.4013245, 13.0172185 9.64238411, 13.3139073 C9.86490066, 13.6291391 10.4211921, 13.592053 10.8847682, 13.2397351 L13.1099338, 11.5337748 C13.5735099, 11.181457 13.7403974, 10.6622517 13.5178808, 10.3655629 C13.2768212, 10.0688742 12.7205298, 10.0874172 12.2569536, 10.4397351 L12.2569536, 10.4397351 Z"
                    />
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M14,1.39072848 C7.08344371, 1.39072848 1.48344371, 6.99072848 1.48344371, 13.9072848 C1.48344371, 20.8238411 7.08344371, 26.4238411 14, 26.4238411 C20.9165563, 26.4238411 26.5165563, 20.8238411 26.5165563, 13.9072848 C26.5165563, 6.99072848 20.9165563, 1.39072848 14, 1.39072848 L14,1.39072848 Z"
                    fill="#ffffff"
                    id="Shape"
                    stroke="#a58eff"
                  />
                  <path
                    d="M8.1218543, 9.86490066 C7.15761589, 9.86490066 6.37880795, 10.6437086 6.37880795, 11.607947 C6.37880795, 12.5721854 7.15761589, 13.3509934 8.1218543, 13.3509934 C9.08609272, 13.3509934 9.86490066, 12.5721854 9.86490066, 11.607947 C9.86490066, 10.6437086 9.06754967, 9.86490066 8.1218543, 9.86490066 L8.1218543, 9.86490066 Z"
                    fill="#a58eff"
                  />
                  <path
                    d="M19.8781457, 9.86490066 C18.9139073, 9.86490066 18.1350993, 10.6437086 18.1350993, 11.607947 C18.1350993, 12.5721854 18.9139073, 13.3509934 19.8781457, 13.3509934 C20.8423841, 13.3509934 21.6211921, 12.5721854 21.6211921, 11.607947 C21.6211921, 10.6437086 20.8423841, 9.86490066 19.8781457, 9.86490066 L19.8781457, 9.86490066 Z"
                    fill="#a58eff"
                  />
                  <path
                    d="M19.581457, 17.4304636 L8.43708609, 17.4304636 C8.06622517, 17.4304636 7.75099338, 17.7456954 7.75099338, 18.1165563 C7.75099338, 18.5059603 8.06622517, 18.8211921 8.43708609, 18.8211921 L19.581457, 18.8211921 C19.9523179, 18.8211921 20.2675497, 18.5059603 20.2675497, 18.1165563 C20.2675497, 17.7456954 19.9523179, 17.4304636 19.581457, 17.4304636 L19.581457, 17.4304636 Z"
                    fill="#a58eff"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sentiments-count margin-m"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div>
          <div
            className="min-sentiment"
            style={
              Object {
                "left": "0px",
              }
            }
          >
            <svg
              height="15px"
              viewBox="0 0 28 28"
              width="15px"
            >
              <g>
                <path
                  d="M13.9072848, 1.39072848 C6.99072848, 1.39072848 1.39072848, 6.99072848 1.39072848, 13.9072848 C1.39072848, 20.8238411 6.99072848, 26.4238411 13.9072848, 26.4238411 C20.8238411, 26.4238411 26.4238411, 20.8238411 26.4238411, 13.9072848 C26.4238411, 6.99072848 20.8238411, 1.39072848 13.9072848, 1.39072848 L13.9072848, 1.39072848 Z"
                  fill="#ffffff"
                  stroke="#46d38d"
                />
                <path
                  d="M8.02913907, 9.86490066 C7.06490066, 9.86490066 6.28609272, 10.6437086 6.28609272, 11.607947 C6.28609272, 12.5721854 7.06490066, 13.3509934 8.02913907, 13.3509934 C8.99337748, 13.3509934 9.77218543, 12.5721854 9.77218543, 11.607947 C9.75364238, 10.6437086 8.99337748, 9.86490066 8.02913907, 9.86490066 L8.02913907, 9.86490066 Z"
                  fill="#46d38d"
                />
                <path
                  d="M19.7854305, 9.86490066 C18.8211921, 9.86490066 18.0423841, 10.6437086 18.0423841, 11.607947 C18.0423841, 12.5721854 18.8211921, 13.3509934 19.7854305, 13.3509934 C20.7496689, 13.3509934 21.5284768, 12.5721854 21.5284768, 11.607947 C21.5284768, 10.6437086 20.7496689, 9.86490066 19.7854305, 9.86490066 L19.7854305, 9.86490066 Z"
                  fill="#46d38d"
                />
                <path
                  d="M20.9350993, 17.189404 C16.9112583, 21.1576159 10.9218543, 21.1576159 6.89801325, 17.189404 C6.58278146, 16.8741722 6.52715232, 16.3735099 6.76821192, 16.0953642 C7.00927152, 15.8357616 7.41721854, 15.8543046 7.69536424, 16.1324503 C11.2556291, 19.6556291 16.5774834, 19.6556291 20.1377483, 16.1324503 C20.415894, 15.8543046 20.8238411, 15.8357616 21.0649007, 16.0953642 C21.3059603, 16.3735099 21.2503311, 16.8741722 20.9350993, 17.189404 L20.9350993, 17.189404 Z"
                  fill="#46d38d"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="txt"
          style={
            Object {
              "paddingLeft": "18px",
            }
          }
        >
          <span>
            1 réaction
          </span>
        </div>
      </div>
      <div
        className="custom-overlay"
      >
        <div
          onBlur={[Function]}
          onClick={null}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <button
            className="comment-helper comment-helper-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="assembl-icon-suggest"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            FictionBodyToolbar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  FictionBodyToolbar
                </span>
                <span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      position
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              x
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            100
                          </span>
                          ,
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              y
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            0
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      postId
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          2
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      mySentiment
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          LIKE
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      sentimentCounts
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              disagree
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            0
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              dontUnderstand
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            0
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              like
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            1
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            …
                          </span>
                          <span>
                            <br />
                              
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      isPhaseCompleted
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      client
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          client
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      screenWidth
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          100
                        </span>
                        }
                      </span>
                    </span>
                    <br />
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              FictionBodyToolbar
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FictionBodyToolbar playground 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="body-toolbar-container hidden-xs hidden-sm hidden-md"
      style={
        Object {
          "left": "35px",
          "top": "5px",
        }
      }
    >
      <div
        className="add-sentiment"
      >
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment sentiment-active"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M13.9072848, 1.39072848 C6.99072848, 1.39072848 1.39072848, 6.99072848 1.39072848, 13.9072848 C1.39072848, 20.8238411 6.99072848, 26.4238411 13.9072848, 26.4238411 C20.8238411, 26.4238411 26.4238411, 20.8238411 26.4238411, 13.9072848 C26.4238411, 6.99072848 20.8238411, 1.39072848 13.9072848, 1.39072848 L13.9072848, 1.39072848 Z"
                    fill="#ffffff"
                    stroke="#46d38d"
                  />
                  <path
                    d="M8.02913907, 9.86490066 C7.06490066, 9.86490066 6.28609272, 10.6437086 6.28609272, 11.607947 C6.28609272, 12.5721854 7.06490066, 13.3509934 8.02913907, 13.3509934 C8.99337748, 13.3509934 9.77218543, 12.5721854 9.77218543, 11.607947 C9.75364238, 10.6437086 8.99337748, 9.86490066 8.02913907, 9.86490066 L8.02913907, 9.86490066 Z"
                    fill="#46d38d"
                  />
                  <path
                    d="M19.7854305, 9.86490066 C18.8211921, 9.86490066 18.0423841, 10.6437086 18.0423841, 11.607947 C18.0423841, 12.5721854 18.8211921, 13.3509934 19.7854305, 13.3509934 C20.7496689, 13.3509934 21.5284768, 12.5721854 21.5284768, 11.607947 C21.5284768, 10.6437086 20.7496689, 9.86490066 19.7854305, 9.86490066 L19.7854305, 9.86490066 Z"
                    fill="#46d38d"
                  />
                  <path
                    d="M20.9350993, 17.189404 C16.9112583, 21.1576159 10.9218543, 21.1576159 6.89801325, 17.189404 C6.58278146, 16.8741722 6.52715232, 16.3735099 6.76821192, 16.0953642 C7.00927152, 15.8357616 7.41721854, 15.8543046 7.69536424, 16.1324503 C11.2556291, 19.6556291 16.5774834, 19.6556291 20.1377483, 16.1324503 C20.415894, 15.8543046 20.8238411, 15.8357616 21.0649007, 16.0953642 C21.3059603, 16.3735099 21.2503311, 16.8741722 20.9350993, 17.189404 L20.9350993, 17.189404 Z"
                    fill="#46d38d"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M14, 1.39072848 C7.08344371, 1.39072848 1.48344371, 6.99072848 1.48344371, 13.9072848 C1.48344371, 20.8238411 7.08344371, 26.4238411 14, 26.4238411 C20.9165563, 26.4238411 26.5165563, 20.8238411 26.5165563, 13.9072848 C26.5165563, 6.99072848 20.9165563, 1.39072848 14, 1.39072848 L14, 1.39072848 Z"
                    fill="#ffffff"
                    stroke="#f75959"
                  />
                  <path
                    d="M8.1218543, 9.86490066 C7.15761589, 9.86490066 6.37880795, 10.6437086 6.37880795, 11.607947 C6.37880795, 12.5721854 7.15761589, 13.3509934 8.1218543, 13.3509934 C9.08609272, 13.3509934 9.86490066, 12.5721854 9.86490066, 11.607947 C9.86490066, 10.6437086 9.06754967, 9.86490066 8.1218543, 9.86490066 L8.1218543, 9.86490066 Z"
                    fill="#f75959"
                  />
                  <path
                    d="M19.8781457, 9.86490066 C18.9139073, 9.86490066 18.1350993, 10.6437086 18.1350993, 11.607947 C18.1350993, 12.5721854 18.9139073, 13.3509934 19.8781457, 13.3509934 C20.8423841, 13.3509934 21.6211921, 12.5721854 21.6211921, 11.607947 C21.6211921, 10.6437086 20.8423841, 9.86490066 19.8781457, 9.86490066 L19.8781457, 9.86490066 Z"
                    fill="#f75959"
                  />
                  <path
                    d="M21.0278146, 18.8953642 C17.0039735, 14.9271523 11.0145695, 14.9271523 6.99072848, 18.8953642 C6.67549669, 19.210596 6.61986755, 19.7112583 6.86092715, 19.989404 C7.10198675, 20.2490066 7.50993377, 20.2304636 7.78807947, 19.9523179 C11.3483444, 16.4291391 16.6701987, 16.4291391 20.2304636, 19.9523179 C20.5086093, 20.2304636 20.9165563, 20.2490066 21.1576159, 19.989404 C21.3986755, 19.7112583 21.3430464, 19.210596 21.0278146, 18.8953642 L21.0278146, 18.8953642 Z"
                    fill="#f75959"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M13.9072848, 1.48344371 C6.99072848, 1.48344371 1.39072848, 7.08344371 1.39072848, 14 C1.39072848, 20.9165563 6.99072848, 26.5165563 13.9072848, 26.5165563 C20.8238411, 26.5165563 26.4238411, 20.9165563 26.4238411, 14 C26.4238411, 7.08344371 20.8238411, 1.48344371 13.9072848, 1.48344371 L13.9072848, 1.48344371 Z"
                    fill="#ffffff"
                    stroke="#faaf3f"
                  />
                  <g
                    fill="#faaf3f"
                    transform="translate(4.821192, 7.231788)"
                  >
                    <g
                      transform="translate(1.298013, 2.966887)"
                    >
                      <path
                        d="M1.90993377, 0.0556291391 C0.945695364, 0.0556291391 0.166887417, 0.834437086 0.166887417, 1.7986755 C0.166887417, 2.76291391 0.945695364, 3.54172185 1.90993377, 3.54172185 C2.87417219, 3.54172185 3.65298013, 2.76291391 3.65298013, 1.7986755 C3.63443709, 0.834437086 2.85562914, 0.0556291391 1.90993377, 0.0556291391 L1.90993377, 0.0556291391 Z"
                      />
                      <ellipse
                        cx="13.6662252"
                        cy="1.78013245"
                        rx="1.74304636"
                        ry="1.74304636"
                      />
                    </g>
                    <g>
                      <rect
                        height="5.56291391"
                        transform="translate(15.209636, 1.684541) rotate(-69.910674) translate(-15.209636, -1.684541) "
                        width="1.39072848"
                        x="14.514241"
                        y="-1.09703938"
                      />
                      <rect
                        height="1.39072848"
                        transform="translate(2.964735, 1.694145) rotate(-20.078564) translate(-2.964735, -1.694145) "
                        width="5.56291391"
                        x="0.183345952"
                        y="0.99879725"
                      />
                    </g>
                    <path
                      d="M12.2569536, 10.4397351 L10.0317881, 12.1456954 C9.58675497, 12.4980132 9.4013245, 13.0172185 9.64238411, 13.3139073 C9.86490066, 13.6291391 10.4211921, 13.592053 10.8847682, 13.2397351 L13.1099338, 11.5337748 C13.5735099, 11.181457 13.7403974, 10.6622517 13.5178808, 10.3655629 C13.2768212, 10.0688742 12.7205298, 10.0874172 12.2569536, 10.4397351 L12.2569536, 10.4397351 Z"
                    />
                  </g>
                </g>
              </svg>
            </div>
          </div>
        </div>
        <div
          className="custom-overlay"
        >
          <div
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <div
              className="sentiment"
              onClick={[Function]}
            >
              <svg
                height="23px"
                viewBox="0 0 28 28"
                width="23px"
              >
                <g>
                  <path
                    d="M14,1.39072848 C7.08344371, 1.39072848 1.48344371, 6.99072848 1.48344371, 13.9072848 C1.48344371, 20.8238411 7.08344371, 26.4238411 14, 26.4238411 C20.9165563, 26.4238411 26.5165563, 20.8238411 26.5165563, 13.9072848 C26.5165563, 6.99072848 20.9165563, 1.39072848 14, 1.39072848 L14,1.39072848 Z"
                    fill="#ffffff"
                    id="Shape"
                    stroke="#a58eff"
                  />
                  <path
                    d="M8.1218543, 9.86490066 C7.15761589, 9.86490066 6.37880795, 10.6437086 6.37880795, 11.607947 C6.37880795, 12.5721854 7.15761589, 13.3509934 8.1218543, 13.3509934 C9.08609272, 13.3509934 9.86490066, 12.5721854 9.86490066, 11.607947 C9.86490066, 10.6437086 9.06754967, 9.86490066 8.1218543, 9.86490066 L8.1218543, 9.86490066 Z"
                    fill="#a58eff"
                  />
                  <path
                    d="M19.8781457, 9.86490066 C18.9139073, 9.86490066 18.1350993, 10.6437086 18.1350993, 11.607947 C18.1350993, 12.5721854 18.9139073, 13.3509934 19.8781457, 13.3509934 C20.8423841, 13.3509934 21.6211921, 12.5721854 21.6211921, 11.607947 C21.6211921, 10.6437086 20.8423841, 9.86490066 19.8781457, 9.86490066 L19.8781457, 9.86490066 Z"
                    fill="#a58eff"
                  />
                  <path
                    d="M19.581457, 17.4304636 L8.43708609, 17.4304636 C8.06622517, 17.4304636 7.75099338, 17.7456954 7.75099338, 18.1165563 C7.75099338, 18.5059603 8.06622517, 18.8211921 8.43708609, 18.8211921 L19.581457, 18.8211921 C19.9523179, 18.8211921 20.2675497, 18.5059603 20.2675497, 18.1165563 C20.2675497, 17.7456954 19.9523179, 17.4304636 19.581457, 17.4304636 L19.581457, 17.4304636 Z"
                    fill="#a58eff"
                  />
                </g>
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sentiments-count margin-m"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div>
          <div
            className="min-sentiment"
            style={
              Object {
                "left": "0px",
              }
            }
          >
            <svg
              height="15px"
              viewBox="0 0 28 28"
              width="15px"
            >
              <g>
                <path
                  d="M13.9072848, 1.39072848 C6.99072848, 1.39072848 1.39072848, 6.99072848 1.39072848, 13.9072848 C1.39072848, 20.8238411 6.99072848, 26.4238411 13.9072848, 26.4238411 C20.8238411, 26.4238411 26.4238411, 20.8238411 26.4238411, 13.9072848 C26.4238411, 6.99072848 20.8238411, 1.39072848 13.9072848, 1.39072848 L13.9072848, 1.39072848 Z"
                  fill="#ffffff"
                  stroke="#46d38d"
                />
                <path
                  d="M8.02913907, 9.86490066 C7.06490066, 9.86490066 6.28609272, 10.6437086 6.28609272, 11.607947 C6.28609272, 12.5721854 7.06490066, 13.3509934 8.02913907, 13.3509934 C8.99337748, 13.3509934 9.77218543, 12.5721854 9.77218543, 11.607947 C9.75364238, 10.6437086 8.99337748, 9.86490066 8.02913907, 9.86490066 L8.02913907, 9.86490066 Z"
                  fill="#46d38d"
                />
                <path
                  d="M19.7854305, 9.86490066 C18.8211921, 9.86490066 18.0423841, 10.6437086 18.0423841, 11.607947 C18.0423841, 12.5721854 18.8211921, 13.3509934 19.7854305, 13.3509934 C20.7496689, 13.3509934 21.5284768, 12.5721854 21.5284768, 11.607947 C21.5284768, 10.6437086 20.7496689, 9.86490066 19.7854305, 9.86490066 L19.7854305, 9.86490066 Z"
                  fill="#46d38d"
                />
                <path
                  d="M20.9350993, 17.189404 C16.9112583, 21.1576159 10.9218543, 21.1576159 6.89801325, 17.189404 C6.58278146, 16.8741722 6.52715232, 16.3735099 6.76821192, 16.0953642 C7.00927152, 15.8357616 7.41721854, 15.8543046 7.69536424, 16.1324503 C11.2556291, 19.6556291 16.5774834, 19.6556291 20.1377483, 16.1324503 C20.415894, 15.8543046 20.8238411, 15.8357616 21.0649007, 16.0953642 C21.3059603, 16.3735099 21.2503311, 16.8741722 20.9350993, 17.189404 L20.9350993, 17.189404 Z"
                  fill="#46d38d"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          className="txt"
          style={
            Object {
              "paddingLeft": "18px",
            }
          }
        >
          <span>
            1 réaction
          </span>
        </div>
      </div>
      <div
        className="custom-overlay"
      >
        <div
          onBlur={[Function]}
          onClick={null}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <button
            className="comment-helper comment-helper-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="assembl-icon-suggest"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            FictionBodyToolbar
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            playground
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  FictionBodyToolbar
                </span>
                <span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      postId
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          2
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      position
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              x
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            100
                          </span>
                          ,
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              y
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            0
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      screenWidth
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          100
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      isPhaseCompleted
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          false
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      mySentiment
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          LIKE
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      sentimentCounts
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              disagree
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            0
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              dontUnderstand
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            0
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              like
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#a11",
                              }
                            }
                          >
                            1
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            …
                          </span>
                          <span>
                            <br />
                              
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                    <br />
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              FictionBodyToolbar
              " Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
